kubernetes-resources/ambassador-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ambassador
spec:
  type: ClusterIP
  ports:
    - port: 80
  selector:
    service: ambassador
