kubernetes-resources/ambassador-ingress-tls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ambassador
  annotations:
    kubernetes.io/ingress.class: "nginx"
    certmanager.k8s.io/issuer: "letsencrypt-prod"
    certmanager.k8s.io/acme-challenge-type: http01

spec:
  tls:
    - hosts:
        - krebseng.com.br
      secretName: krebseng-tls
  rules:
    - host: krebseng.com.br
      http:
        paths:
          - path: /
            backend:
              serviceName: ambassador
              servicePort: 80
