kubernetes-resources/ambassador-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ambassador
  annotations:
    kubernetes.io/ingress.class: "nginx"

spec:
  rules:
    - host: krebseng.com.br
      http:
        paths:
          - path: /
            backend:
              serviceName: ambassador
              servicePort: 80
